@@ -23,15 +23,31 @@ function cursor_nav(e) {
 
 	switch (taste) {
 		case back:
-			backward = document.getElementById("g-nav-backward_1");
-			if(backward) {
+			if(document.getElementById("g-nav-backward_1")) {
+				backward = document.getElementById("g-nav-backward_1");
+			}
+			else if(document.getElementById("g-navmicro-backward_1")) {
+				backward = document.getElementById("g-navmicro-backward_1");
+			}
+
+			if (backward) {
 				window.location.href = backward.href;
 			}
+
 		break;
 
 		case forward:
 			forward = document.getElementById("g-nav-forward_1");
-			if(forward) {
+
+			if(document.getElementById("g-nav-forward_1")) {
+				forward = document.getElementById("g-nav-forward_1");
+			}
+			else if(document.getElementById("g-navmicro-forward_1")) {
+				forward = document.getElementById("g-navmicro-forward_1");
+			}
+
+
+			if (forward) {
 				window.location.href = forward.href;
 			}
 		break;
